# AgentPipe

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MISSION-STATEMENT.md  README.md  debt.yaml  employees.yaml  fix.py  package.json  pyproject.toml  test_butter.js
.github/scripts/: chatter.py  company_store.py  employment_check.py  human_review.py  improve.py  payout.py  paystub.py  record_debt.py  registration.py  review.py
.github/workflows/: chatter.yaml  company_store.yaml  employment_check.yaml  human_review.yaml  improve.yaml  mortgage.yaml  pages.yml  payout.yaml  paystub.yaml  (+3 more)
docs/: banana4d.js  butter.html  butter.js  index.html  styles.css
improvement/: mascot_pattern_generator.py
scripts/: agentpipe_mascot.pl
src/: Goose.sc  __init__.py  abstract_data_type_generator.js  abstract_data_type_generator.rs  abstract_data_type_generator.ts  alchemy_database.cobol  alchemy_database.go  alchemy_database.py  alchemy_database.rs  alchemy_database.ts  alchemy_manager.py  back_dial.py  back_dial.rs  banana_recipes_test.py  banana_recipes_test_suite.ts  bank_of_banana_pudding.py  book_of_banana_pudding.py  code_of_conduct.py  committee.py  committee_conideration.py  encrypt_decrypt_module.ts  finance_system_interface.ts  financial_system_interface.go  financial_system_interface.ts  goose_supercollider.md  jazz_ensemble.py  jazz_ensemble_fixes.py  main.py  obfuscation_module.py  reaction_visualizer.rs  reactivity_visualizer.py  security_control_plane.py  token_tracker.py  token_tracker.ts  turbo_encabulator.py  turbo_encabulator.ts  types.ts  zen.bf
(+57 files in other folders)
